[project]
name = "cs-lambda"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "responses>=0.25.3",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=. --cov-report=term-missing --cov-report=xml -v"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*"]
relative_files = true

[tool.coverage.report]
show_missing = true
